--- a/output/lightning_logs/Dummy/version_0/config.yaml
+++ b/output/lightning_logs/Dummy/version_0/config.yaml
@@ -1,5 +1,5 @@
-# lightning.pytorch==2.0.9
-seed_everything: 302317970
+# lightning.pytorch==2.0.6
+seed_everything: 133501207
 trainer:
   accelerator: gpu
   strategy: auto
@@ -35,6 +35,7 @@ trainer:
   val_check_interval: null
   check_val_every_n_epoch: 1
   num_sanity_val_steps: 0
+  log_every_n_steps: 1
   enable_checkpointing: null
   enable_progress_bar: null
   enable_model_summary: null
@@ -60,4 +61,5 @@ data:
   downscale_factor: 2
   batch_size: 64
   num_workers: 2
+  hard_triplets: false
 ckpt_path: null
