--- a/output/lightning_logs/Dummy/version_0/config.yaml
+++ b/output/lightning_logs/Dummy/version_0/config.yaml
@@ -1,5 +1,5 @@
 # lightning.pytorch==2.0.6
-seed_everything: 2128230457
+seed_everything: 3835564929
 trainer:
   accelerator: gpu
   strategy: auto
@@ -17,10 +17,25 @@ trainer:
       prefix: ''
       sub_dir: null
   callbacks:
-    class_path: lightning.pytorch.callbacks.LearningRateMonitor
+  - class_path: lightning.pytorch.callbacks.LearningRateMonitor
     init_args:
       logging_interval: epoch
       log_momentum: false
+  - class_path: lightning.pytorch.callbacks.ModelCheckpoint
+    init_args:
+      dirpath: null
+      filename: null
+      monitor: R@1
+      verbose: false
+      save_last: true
+      save_top_k: 1
+      save_weights_only: false
+      mode: max
+      auto_insert_metric_name: true
+      every_n_train_steps: null
+      train_time_interval: null
+      every_n_epochs: null
+      save_on_train_epoch_end: false
   fast_dev_run: false
   max_epochs: 1
   min_epochs: null
